--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "fleetbase/core-api": "dev-main",
+        "fleetbase/core-api": "*",
         "geocoder-php/google-maps-places-provider": "^1.4",
         "milon/barcode": "^9.0",
         "php-http/guzzle7-adapter": "^1.0",
+        "psr/http-factory-implementation": "*",
         "toin0u/geocoder-laravel": "^4.4"
     },
     "require-dev": {
@@ -37,7 +38,7 @@
     "repositories": [
         {
             "type": "path",
-            "url": "../../api/core"
+            "url": "../core-api"
         }
     ],
     "minimum-stability": "dev",
@@ -53,7 +54,8 @@
         "sort-packages": true,
         "preferred-install": "dist",
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
     "scripts": {
