--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,18 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "brick/geo": "0.7.2",
+        "cknow/laravel-money": "^7.1",
         "fleetbase/core-api": "*",
         "geocoder-php/google-maps-places-provider": "^1.4",
+        "giggsey/libphonenumber-for-php": "^8.13",
         "league/geotools": "^1.1.0",
         "milon/barcode": "^9.0",
         "php-http/guzzle7-adapter": "^1.0",
         "psr/http-factory-implementation": "*",
-        "toin0u/geocoder-laravel": "^4.4"
+        "toin0u/geocoder-laravel": "^4.4",
+        "webit/eval-math": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16.4",
