--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
     "name": "fleetbase/fleetops-api",
     "version": "1.0.0-dev",
     "description": "FleetOps TMS and Last-Mile Operations System",
-    "keywords": ["fleetops", "last-mile", "tms", "delivery management"],
+    "keywords": [
+        "fleetops",
+        "last-mile",
+        "tms",
+        "delivery management"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -52,7 +57,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Fleetbase\\FleetOps\\Providers\\FleetOpsServiceProvider"
+                "Fleetbase\\FleetOps\\Providers\\FleetOpsServiceProvider",
+                "Fleetbase\\FleetOps\\Providers\\EventServiceProvider"
             ]
         }
     },
