--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "name": "fleetbase/fleetops-api",
-    "version": "1.0.5-alpha",
+    "version": "1.0.6-alpha",
     "description": "FleetOps TMS and Last-Mile Operations System",
     "keywords": [
+        "fleetbase-extension",
         "fleetops",
         "last-mile",
         "tms",
